Add test workflow for dev branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,18 +23,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest pytest-html allure-pytest
 
     - name: Set up Chrome
       uses: browser-actions/setup-chrome@v1
 
     - name: Verify Chrome installed
       run: google-chrome --version
-
-    - name: Install Allure CLI
-      run: |
-        sudo apt-add-repository ppa:qameta/allure -y
-        sudo apt-get update
-        sudo apt-get install allure -y
 
     - name: Run Pytest with HTML and Allure reporting
       run: pytest tests/ --browser chrome  --headless --html=reports/report.html --self-contained-html --alluredir=reports/allure-results
