Add test workflow for dev branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,14 @@ jobs:
     - name: Run Pytest with HTML and Allure reporting
       run: pytest tests/ --browser chrome  --headless --html=reports/report.html --self-contained-html --alluredir=reports/allure-results
 
+    - name: Download Allure CLI
+      run: |
+          ALLURE_VERSION=2.30.0
+          wget https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${ALLURE_VERSION}/allure-commandline-${ALLURE_VERSION}.tgz -O allure.tgz
+          tar -zxvf allure.tgz
+          sudo mv allure-${ALLURE_VERSION} /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
+          allure --version
 
     - name: Generate Allure HTML Report
       run: allure generate reports/allure-results -o reports/allure-report --clean
